<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">





            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_lernen"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="30dp"
                    card_view:cardCornerRadius="2dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:onClick="startLearning"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/imageViewLernen"
                            android:layout_width="fill_parent"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="0dp"
                            android:onClick="startLearning"
                            android:src="@drawable/learning"
                            android:scaleType="centerCrop" />


                        <TextView
                            android:id="@+id/textViewLernen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:onClick="startLearning"
                            android:text="@string/text_lernen"
                            android:textAppearance="?android:attr/textAppearanceLarge" />
                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp">

                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_sammlung"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="16dp"

                    android:clickable="true"
                    card_view:cardCornerRadius="2dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp">


                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:onClick="startCollection"
                        android:orientation="vertical"
                        android:weightSum="1">


                        <ImageView
                            android:id="@+id/imageViewSammlung"
                            android:layout_width="wrap_content"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="0dp"
                            android:onClick="startCollection"
                            android:src="@drawable/lernen"
                            android:scaleType="centerCrop" />


                        <TextView
                            android:id="@+id/textViewSammlung"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:onClick="startCollection"
                            android:text="@string/text_sammlung"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:gravity="center" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_statistik"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"


                    card_view:cardCornerRadius="2dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/imageViewStatistik"
                            android:layout_width="fill_parent"
                            android:layout_height="150dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="0dp"
                            android:onClick="startStatistics"
                            android:scaleType="centerCrop"
                            android:src="@drawable/statistik" />

                        <TextView
                            android:id="@+id/textViewStatistik"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/text_statistik"
                            android:textAppearance="?android:attr/textAppearanceLarge" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>


</LinearLayout>
